// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

import "google/protobuf/timestamp.proto";

option go_package = "user/ent/proto/entpb";

message Account {
  int64 id = 1;

  string username = 2;

  string password = 3;

  Status status = 4;

  google.protobuf.Timestamp created_at = 5;

  google.protobuf.Timestamp updated_at = 6;

  User user = 7;

  enum Status {
    STATUS_ACTIVE = 0;

    STATUS_INACTIVE = 1;
  }
}

message CreateAccountRequest {
  Account account = 1;
}

message GetAccountRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateAccountRequest {
  Account account = 1;
}

message DeleteAccountRequest {
  int64 id = 1;
}

message ListAccountRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListAccountResponse {
  repeated Account account_list = 1;

  string next_page_token = 2;
}

message BatchCreateAccountsRequest {
  repeated CreateAccountRequest requests = 1;
}

message BatchCreateAccountsResponse {
  repeated Account accounts = 1;
}

message User {
  int64 id = 1;

  string first_name = 2;

  string last_name = 3;

  Gender gender = 4;

  string email = 5;

  string phone = 6;

  string ward_code = 7;

  string address = 8;

  google.protobuf.Timestamp created_at = 9;

  google.protobuf.Timestamp updated_at = 10;

  string company_id = 12;

  Account account = 11;

  enum Gender {
    GENDER_OTHER = 0;

    GENDER_FEMALE = 1;

    GENDER_MALE = 2;
  }
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message ListUserRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListUserResponse {
  repeated User user_list = 1;

  string next_page_token = 2;
}

message BatchCreateUsersRequest {
  repeated CreateUserRequest requests = 1;
}

message BatchCreateUsersResponse {
  repeated User users = 1;
}

service AccountService {
  rpc Create ( CreateAccountRequest ) returns ( Account );

  rpc Get ( GetAccountRequest ) returns ( Account );

  rpc Update ( UpdateAccountRequest ) returns ( Account );

  rpc Delete ( DeleteAccountRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListAccountRequest ) returns ( ListAccountResponse );

  rpc BatchCreate ( BatchCreateAccountsRequest ) returns ( BatchCreateAccountsResponse );
}

service UserService {
  rpc Create ( CreateUserRequest ) returns ( User );

  rpc Get ( GetUserRequest ) returns ( User );

  rpc Update ( UpdateUserRequest ) returns ( User );

  rpc Delete ( DeleteUserRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListUserRequest ) returns ( ListUserResponse );

  rpc BatchCreate ( BatchCreateUsersRequest ) returns ( BatchCreateUsersResponse );
}
